force-app/main/default/objects/school__c/fields/School_Address__c.field-meta.xml
<CustomField>
    <fullName>School_Address__c</fullName>
    <label>School Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>