force-app/main/default/objects/school__c/fields/school_Email__c.field-meta.xml
<CustomField>
    <fullName>school_Email__c</fullName>
    <label>school Email</label>
    <type>Email</type>
</CustomField>