force-app/main/default/objects/school__c/fields/school_Phone__c.field-meta.xml
<CustomField>
    <fullName>school_Phone__c</fullName>
    <label>school Phone</label>
    <type>Phone</type>
</CustomField>